Fix comment text white spacing

--- a/src/style.css
+++ b/src/style.css
@@ -341,7 +341,7 @@ body {
 		line-height: 1.5;
 
 		pre {
-			white-space: pre-line;
+			white-space: pre-wrap;
 			overflow: auto;
 		}
 
